crates/tui/snapshots/fullscreen/modal/config_page_hints_search_40_english.snap
---
source: crates/tui/src/app/fullscreen/modal_tests.rs
expression: text
---
  ┌── Config ────────────────────[✗]─┐  
  │                                  │  
  │   General    Providers           │  
  │   Issues    Network              │  
  │                                  │  
  │  ╭─────────────────────────────╮ │  
  │  │ Search configuration        │ │  
  │  ╰─────────────────────────────╯ │  
  │  Vim mode                  off   │  
  └──────────────────────────────────┘  
  Enter/Esc/Ctrl+C to return  ·         
  Tab/Shift+Tab to switch
